add host swag file
